--- a/tests/jsonserver/index.html
+++ b/tests/jsonserver/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-    <link rel="stylesheet" href="/test/jsonserver/assets/styles/globals.css">
+    <link rel="stylesheet" href="/tests/jsonserver/assets/styles/globals.css">
 </head>
 <body>
 
@@ -51,6 +51,6 @@
         </div>
     </div>
 
-    <script type="module" src="/test/jsonserver/assets/js/main.js"></script>
+    <script type="module" src="assets/js/main.js"></script>
 </body>
 </html>
